<?xml version="1.0" encoding="utf-8"?>

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
	android:keyWidth="27%p" android:horizontalGap="0px"
	android:verticalGap="0px" android:keyHeight="54dip">

	<Row>
		<Key android:codes="8" android:keyLabel="1" android:keyEdgeFlags="left" />
		<Key android:codes="9" android:keyLabel="2" />
		<Key android:codes="10" android:keyLabel="3" />
		<Key android:codes="67" android:keyIcon="@drawable/sym_keyboard_delete"
			android:iconPreview="@drawable/sym_keyboard_delete"
			android:keyEdgeFlags="right" android:keyWidth="19%p" android:isRepeatable="true"/>		
	</Row>

	<Row>
	    <Key android:codes="11" android:keyLabel="4" android:keyEdgeFlags="left" />
		<Key android:codes="12" android:keyLabel="5" />
		<Key android:codes="13" android:keyLabel="6" android:keyEdgeFlags="right"/>	
	</Row>

	<Row>
	    <Key android:codes="14" android:keyLabel="7" android:keyEdgeFlags="left"/>
		<Key android:codes="15" android:keyLabel="8" />	
		<Key android:codes="16" android:keyLabel="9" android:keyEdgeFlags="right" />
	</Row>

	<Row>
		<Key android:codes="7" android:keyLabel="0" />
		<Key android:codes="@string/number_separator_key_code" android:keyLabel="@string/number_separator"/>
		<Key android:codes="66" android:keyLabel="@string/next_key_label" android:keyEdgeFlags="right" android:keyWidth="19%p" android:horizontalGap="27%p" android:keyBackground="@drawable/key_selector"/>
	</Row>

</Keyboard>