<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@color/off_white" >

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:padding="2dp" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/TextView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income_source"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TextView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="2dp"
                        android:text=":"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green"
                        android:textStyle="bold" />





                    <TextView
                        android:id="@+id/incomeSourceValueLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >


                    <TextView
                        android:id="@+id/TextView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currency"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TextView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="2dp"
                        android:text=":"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green" />


                    <TextView
                        android:id="@+id/currencyValueLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >


                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sum"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="2dp"
                        android:text=":"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/sumValueLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >


                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comment"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TextView07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="2dp"
                        android:text=":"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/green" />


                    <TextView
                        android:id="@+id/commentValueLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttons_panel"
        android:paddingTop="4dp"
        android:visibility="gone" >


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="cancelClicked"
            android:text="@string/back" />

    </LinearLayout>

</LinearLayout>