<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@color/off_white" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/topPanelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/expensePlanSpinner"
                    style="@style/spinner_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/viewExpensePlanButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/transparent_selector"
                    android:onClick="viewExpensePlanClicked"
                    android:src="@drawable/eye" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/off_white"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabsLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginRight="4dp" >

        <ImageView
            android:id="@+id/topPanelControlButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/hide_top_panel_button_selector"
            android:onClick="topPanelControlClicked"
            android:src="@drawable/arrow_up" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/itemsTab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/tab_active"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="itemsTabClicked"
                android:text="@string/envelopes"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/expensesTab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/tab_passive"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="expensesTabClicked"
                android:text="@string/expenses"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/off_white"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemsAndExpensesListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/itemsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>

        <LinearLayout
            android:id="@+id/noItemsListInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/please_press"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/transparent_selector"
                android:onClick="exchangeDataClicked"
                android:src="@drawable/exchange_data" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/to_get_updated_info"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <ListView
            android:id="@+id/expensesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" >
        </ListView>

        <LinearLayout
            android:id="@+id/noExpensesListInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/no_expenses"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>